remove autoformat