@@ -18,6 +18,7 @@ import java.util.List;
 
 import org.apache.commons.lang3.StringUtils;
 import org.flowable.engine.common.api.FlowableException;
+import org.flowable.variable.service.impl.persistence.entity.SealMetadataList;
 import org.joda.time.DateTime;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -27,71 +28,71 @@ import org.slf4j.LoggerFactory;
  */
 public class ExecutionVariableFactory {
 
-	private static final Logger LOGGER = LoggerFactory.getLogger(ExecutionVariableFactory.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(ExecutionVariableFactory.class);
 
-	public static Object getExecutionVariable(String type, Object expressionResult) {
+    public static Object getExecutionVariable(String type, Object expressionResult) {
 
-		if (type == null || expressionResult == null) {
-			LOGGER.error("could not create result variable: type {} expression result {}", type, expressionResult);
-			throw new FlowableException("could not create result variable");
-		}
+        if (type == null || expressionResult == null) {
+            LOGGER.error("could not create result variable: type {} expression result {}", type, expressionResult);
+            throw new FlowableException("could not create result variable");
+        }
 
-		Object executionVariable = null;
+        Object executionVariable = null;
 
-		try {
-			if (StringUtils.equals("boolean", type)) {
-				if (expressionResult instanceof Boolean) {
-					executionVariable = expressionResult;
-				} else {
-					executionVariable = new Boolean(expressionResult.toString());
-				}
-			} else if (StringUtils.equals("string", type)) {
-				if (expressionResult instanceof String) {
-					executionVariable = expressionResult;
-				} else {
-					executionVariable = expressionResult.toString();
-				}
-			} else if (StringUtils.equals("listString", type)) {
-				if (expressionResult instanceof String) {
-					executionVariable = expressionResult;
-				} else {
-					executionVariable = expressionResult.toString();
-				}
-			} else if (StringUtils.equals("number", type)) {
-				if (expressionResult instanceof Double) {
-					executionVariable = expressionResult;
-				} else {
-					executionVariable = Double.valueOf(expressionResult.toString());
-				}
-			} else if (StringUtils.equals("date", type)) {
-				if (expressionResult instanceof Date) {
-					executionVariable = expressionResult;
-				} else {
-					executionVariable = new DateTime(expressionResult.toString()).toDate();
-				}
+        try {
+            if (StringUtils.equals("boolean", type)) {
+                if (expressionResult instanceof Boolean) {
+                    executionVariable = expressionResult;
+                } else {
+                    executionVariable = new Boolean(expressionResult.toString());
+                }
+            } else if (StringUtils.equals("string", type)) {
+                if (expressionResult instanceof String) {
+                    executionVariable = expressionResult;
+                } else {
+                    executionVariable = expressionResult.toString();
+                }
+            } else if (StringUtils.equals("number", type)) {
+                if (expressionResult instanceof Double) {
+                    executionVariable = expressionResult;
+                } else {
+                    executionVariable = Double.valueOf(expressionResult.toString());
+                }
+            } else if (StringUtils.equals("date", type)) {
+                if (expressionResult instanceof Date) {
+                    executionVariable = expressionResult;
+                } else {
+                    executionVariable = new DateTime(expressionResult.toString()).toDate();
+                }
+            } else if (StringUtils.equals("list", type)) {
+                if (expressionResult instanceof SealMetadataList) {
+                    executionVariable = expressionResult;
+                } else {
+                    executionVariable = new SealMetadataList();
+                    ((SealMetadataList) executionVariable).append(expressionResult.toString());
+                }
+            } else {
+                LOGGER.error("could not create result variable: unrecognized mapping type");
+                throw new FlowableException("could not create result variable: unrecognized mapping type");
+            }
+        } catch (Exception e) {
+            LOGGER.error("could not create result variable", e);
+            throw new FlowableException("Could not create execution variable", e);
+        }
 
-			} else {
-				LOGGER.error("could not create result variable: unrecognized mapping type");
-				throw new FlowableException("could not create result variable: unrecognized mapping type");
-			}
-		} catch (Exception e) {
-			LOGGER.error("could not create result variable", e);
-			throw new FlowableException("Could not create execution variable", e);
-		}
+        return executionVariable;
+    }
 
-		return executionVariable;
-	}
+    public static List<Object> getExecutionVariables(String type, List<Object> expressionResults) {
+        if (type == null || expressionResults == null) {
+            return null;
+        }
 
-	public static List<Object> getExecutionVariables(String type, List<Object> expressionResults) {
-		if (type == null || expressionResults == null) {
-			return null;
-		}
+        List<Object> executionVariables = new ArrayList<>();
+        for (Object expressionResult : expressionResults) {
+            executionVariables.add(getExecutionVariable(type, expressionResult));
+        }
 
-		List<Object> executionVariables = new ArrayList<>();
-		for (Object expressionResult : expressionResults) {
-			executionVariables.add(getExecutionVariable(type, expressionResult));
-		}
-
-		return executionVariables;
-	}
+        return executionVariables;
+    }
 }
